# inceptalytics

./: .buildinfo  .gitignore  CITATION.cff  README.md  analytics.py  annotation_analysis.py  dashboard.py  example.py  genindex.html  inception_working_with_exported_projects.py  index.html  install.sh  objects.inv  py-modindex.html  pyproject.toml  read_project.py  requirements.txt  run_streamlit.sh  search.html  searchindex.js  setup.cfg  streamlit.py  streamlit_utils.py  utils.py
.doctrees/: environment.pickle  index.doctree
.doctrees/inceptalytics/: analytics.doctree  utils.doctree
.github/workflows/: documentation.yml
_sources/inceptalytics/: analytics.rst.txt
_static/: documentation_options.js
docs/: conf.py  index.rst
docs/inceptalytics/: utils.rst
examples/: dashboard.py  example.ipynb  example.py  streamlit_requirements.txt
inceptalytics/: __init__.py  analytics.html  analytics.py  utils.html  utils.py
streamlit/: main.py  run.sh
