[tool.poetry]
name = "inceptalytics"
version = "0.1.1"
description = "INCEpTALYTICS is a package for analysing INCEpTION annotation projects."
authors = [
    "Marius Hamacher <marius.hamacher@outlook.de>",
    "Torsten Zesch <torsten.zesch@fernuni-hagen.de>",
]
maintainers = [
    "Marius Hamacher <marius.hamacher@outlook.de>",
]
readme = "README.md"
homepage = "https://github.com/catalpa-cl/inception-analytics"
repository = "https://github.com/catalpa-cl/inception-analytics"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Linguistic"
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
krippendorff = "^0.6.1"
pygamma-agreement = "^0.5.6"
pandas = "^2.1.1"
scikit-learn = "^1.3.1"
pycaprio = "^0.2.1"
dkpro-cassis = "^0.8.0"
urllib3 = "^1.26.15"

[tool.poetry.group.dev.dependencies]


[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
m2r2 = "^0.3.3.post2"
furo = "^2023.9.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
