[metadata]
name = inceptalytics
version = 0.1.0
description = INCEpTALYTICS is a package for analysing INCEpTION annotation projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ltl-ude/inception-analytics
author = Marius Hamacher
author_email = marius.hamacher@outlook.de
maintainer = Marius Hamacher
maintainer_email = marius.hamacher@outlook.de
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = inceptalytics
install_requires =
    dkpro-cassis
    pandas
    scikit-learn
    krippendorff
    numpy
    pygamma-agreement
    pycaprio
